# GameReversi

./: A  A.cpp  CMakeLists.txt  MyClient.cpp  MyClient.h  MyEpoll.cpp  MyEpoll.h  MySocket.cpp  MySocket.h  README.md  main.cpp
TCPServer/: .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Executor.cpp  Executor.h  FileDescriptor.cpp  FileDescriptor.h  HWW2  HttpWorker.cpp  HttpWorker.h  Makefile  Message.cpp  Message.h  MyClient.cpp  MyClient.h  MyEpoll.cpp  MyEpoll.h  SignalHandler.cpp  SignalHandler.h  SmartSocket.cpp  SmartSocket.h  TcpSocketClient.cpp  TcpSocketClient.h  TcpSocketServer.cpp  TcpSocketServer.h  Tools.cpp  Tools.h  cmake_install.cmake  config.txt  core  debug.cpp  debug.h  main.cpp  run.sh
TCPServer/reversiBot/: .bot.cpp.swp  B  B.cpp  bot  bot.cpp
TCPServer/reversiServer/: CMakeCache.txt  GameServer.cpp  GameServer.h  GameState.cpp  GameState.h  Makefile  bot.cpp  cmake_install.cmake  debug.h  main.cpp  reversiServer
TCPServer/reversiServer/clients/: ClientBot.cpp  ClientBot.h  ClientConsole.cpp  ClientInterface.cpp
TCPServer/site/: A.txt  hello.html  index.html  mystyle.css  script.js
reversiServer/: .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  GameServer.cpp  GameState.cpp  GameState.h  cmake_install.cmake  reversiServer
reversiServer/clients/: ClientConsole.h  ClientInterface.h
site/: .A.txt.swp  .hello.html.swp  .index.html.swp  hello.html  index.html  mystyle.css  script.js
